--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,7 +5,6 @@
   --color-shadow: #4d4b4a;
   --color-black: #0d0d0d;
   --color-spot: #8abf8d;
-  --item-max-width: 580px;
 }
 
 /*
@@ -62,13 +61,19 @@ body {
 }
 
 header {
-  padding: 1.5rem clamp(1rem, 10%, 10rem);
+  padding: 1.5rem clamp(1rem, 5%, 10rem);
 }
 
 main {
-  padding: 1.5rem clamp(1rem, 10%, 10rem);
-  display: flex;
-  flex-direction: column;
+  padding: 0 clamp(1rem, 5%, 10rem);
+  display: grid;
+  align-items: start;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: min-content min-content auto;
+  grid-template-areas:
+    "options results"
+    "info results"
+    ". results";
   gap: 1rem;
 }
 
@@ -79,36 +84,24 @@ section {
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  padding: 1rem clamp(1.5rem, 10%, 10rem);
+  padding: 1rem 1.2rem;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 @media screen and (min-width: 992px) {
-  main {
-    flex-direction: row;
-    gap: clamp(1rem, 10%, 4rem);
-    justify-content: center;
-    align-items: flex-start;
-  }
-
-  section {
-    padding: 1rem clamp(1.5rem, 10%, 4rem);
-  }
 }
 
-section h2 {
-  max-width: var(--item-max-width);
-  margin: 0 auto;
-  font-size: 2rem;
+.pla-section-options {
+  grid-area: options;
+  gap: 0.6rem;
 }
 
-input[type="checkbox"] {
-  padding: 0.5rem;
+.pla-section-info {
+  grid-area: info;
 }
 
-select {
-  padding: 0.2rem;
-  border-radius: 0.2rem;
+.pla-section-results {
+  grid-area: results;
 }
 
 .pla-heading-highlight {
@@ -119,6 +112,36 @@ select {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+.pla-section-options input[type="checkbox"] {
+  padding: 0.5rem;
+}
+
+.pla-section-options select {
+  padding: 0.2rem;
+  border-radius: 0.2rem;
+}
+
+.pla-control {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+}
+
+.pla-control-checkbox {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.pla-control-actions {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  margin: 0.8rem 0 0.2rem;
+  gap: 0.8rem;
 }
 
 .pla-action-button {
@@ -142,28 +165,6 @@ select {
   );
 }
 
-.pla-control {
-  display: flex;
-  gap: 2rem;
-  align-items: center;
-  margin: 0.2rem;
-  max-width: var(--item-max-width);
-}
-
-.pla-control label {
-  display: inline-block;
-  text-align: right;
-  width: 40%;
-}
-
-.pla-control-actions {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  margin-top: 0.8rem;
-  max-width: var(--item-max-width);
-}
-
 .pla-results {
   margin: 1rem auto 0.5rem;
   display: flex;
@@ -179,7 +180,6 @@ select {
   display: flex;
   flex-direction: column;
   gap: 0.2rem;
-  max-width: var(--item-max-width);
 }
 
 .pla-results-ivs-container {
@@ -258,4 +258,94 @@ select {
 .pla-results-label {
   display: inline-block;
   min-width: 7ch;
+}
+
+.pla-loading {
+  background-color: #4d4b4a;
+}
+
+.lds-roller {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+  align-self: center;
+}
+.lds-roller div {
+  animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+  transform-origin: 40px 40px;
+}
+.lds-roller div:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  background: #fff;
+  margin: -4px 0 0 -4px;
+}
+.lds-roller div:nth-child(1) {
+  animation-delay: -0.036s;
+}
+.lds-roller div:nth-child(1):after {
+  top: 63px;
+  left: 63px;
+}
+.lds-roller div:nth-child(2) {
+  animation-delay: -0.072s;
+}
+.lds-roller div:nth-child(2):after {
+  top: 68px;
+  left: 56px;
+}
+.lds-roller div:nth-child(3) {
+  animation-delay: -0.108s;
+}
+.lds-roller div:nth-child(3):after {
+  top: 71px;
+  left: 48px;
+}
+.lds-roller div:nth-child(4) {
+  animation-delay: -0.144s;
+}
+.lds-roller div:nth-child(4):after {
+  top: 72px;
+  left: 40px;
+}
+.lds-roller div:nth-child(5) {
+  animation-delay: -0.18s;
+}
+.lds-roller div:nth-child(5):after {
+  top: 71px;
+  left: 32px;
+}
+.lds-roller div:nth-child(6) {
+  animation-delay: -0.216s;
+}
+.lds-roller div:nth-child(6):after {
+  top: 68px;
+  left: 24px;
+}
+.lds-roller div:nth-child(7) {
+  animation-delay: -0.252s;
+}
+.lds-roller div:nth-child(7):after {
+  top: 63px;
+  left: 17px;
+}
+.lds-roller div:nth-child(8) {
+  animation-delay: -0.288s;
+}
+.lds-roller div:nth-child(8):after {
+  top: 56px;
+  left: 12px;
+}
+@keyframes lds-roller {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
