added normal outbreak checking

--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,11 @@
             </div>
 
             <div class="pla-control-actions">
-                <button class="pla-action-button" onclick="checkmmos()">Check MMOS</button>
+                <button class="pla-action-button" onclick="checkmmos()">Check All MMOS</button>
+            </div>
+			
+			<div class="pla-control-actions">
+                <button class="pla-action-button" onclick="checknormals()">Check Normal Outbreaks</button>
             </div>
         </section>
 
@@ -70,6 +74,11 @@
             <ul class="pla-info-list" data-pla-info-locations>
 			
 			</ul>
+			
+			<h3>Normal Outbreaks</h3>
+            <ul class="pla-info-list" data-pla-info-spawns>
+
+            </ul>
 						
             <div class="pla-control-actions">
                 <button class="pla-action-button" onclick="checkmaps()">Refresh Maps</button>
