--- a/templates/index.html
+++ b/templates/index.html
@@ -55,6 +55,10 @@
                 <input type="checkbox" id="mmoAlphaFilter">
             </div>
 			
+			<div class="pla-control">
+				<label for="mmoSpeciesFilter">Species Filter:</label>
+				<input type="text" id="mmoSpeciesFilter">
+			</div>
 			
             <div class="pla-control-actions">
                 <button class="pla-action-button" onclick="checkonemap()">Check Map Index</button>
@@ -97,7 +101,7 @@
         <div class="pla-results-item" data-pla-results-template>
             <ul class="pla-results-heading pla-results-ul">
                 <li class="pla-results-species" data-pla-results-species></li>
-                <li>At <span class="pla-results-location" data-pla-results-location></span></li>
+                <li>At <span class="pla-results-mapname" data-pla-results-mapname></span></li>
             </ul>
 
             <ul class="pla-results-ul">
@@ -107,7 +111,7 @@
 
 			<ul class="pla-results-ul">
                 <li><span class="pla-results-label">Group:</span> <span data-pla-results-group></span></li>
-				<li><span class="pla-results-label">Map:</span> <span data-pla-results-mapname></span></li>
+				<li><span class="pla-results-label">Aggro </span> <span data-pla-results-location></span></li>
             </ul>
             <ul class="pla-results-ul">
                 <li><span class="pla-results-label">Nature:</span> <span data-pla-results-nature></span></li>
