teleport to spawn v1

--- a/templates/index.html
+++ b/templates/index.html
@@ -135,6 +135,9 @@
                     <li class="pla-results-ivs-spe" data-pla-results-ivs-spe></li>
                 </ul>
             </div>
+			
+			<div class="pla-results-teleport">
+			</div>
         </div>
     </template>
 
