initial revisit pathing support

--- a/templates/index.html
+++ b/templates/index.html
@@ -112,8 +112,11 @@
 
 			<ul class="pla-results-ul">
                 <li><span class="pla-results-label">Group:</span> <span data-pla-results-group></span></li>
-				<li><span class="pla-results-label"></span> <span data-pla-results-location></span></li>
+				<li><span class="pla-results-label">Spawn Count:</span><span data-pla-results-numspawns></span></li>
             </ul>
+			<ul class="pla-results-ul">
+				<li><span class="pla-results-label"></span> <span data-pla-results-location></span></li>
+			</ul>
             <ul class="pla-results-ul">
                 <li><span class="pla-results-label">Nature:</span> <span data-pla-results-nature></span></li>
                 <li><span class="pla-results-label">Gender:</span> <span data-pla-results-gender></span></li>
