added show default paths only filter

--- a/templates/index.html
+++ b/templates/index.html
@@ -55,6 +55,11 @@
                 <input type="checkbox" id="mmoAlphaFilter">
             </div>
 			
+			<div class="pla-control-checkbox">
+                <label for="mmoDefaultRouteFilter">Show Default Paths Only</label>
+                <input type="checkbox" id="mmoDefaultRouteFilter">
+            </div>
+			
 			<div class="pla-control">
 				<label for="mmoSpeciesFilter">Species Filter:</label>
 				<input type="text" id="mmoSpeciesFilter">
@@ -118,7 +123,7 @@
 
 			<ul class="pla-results-ul">
                 <li><span class="pla-results-label">Group:</span> <span data-pla-results-group></span></li>
-				<li><span class="pla-results-label">Spawn Count:</span><span data-pla-results-numspawns></span></li>
+				<li><span class="pla-results-label">Default Route?:</span><span data-pla-results-defaultroute></span></li>
             </ul>
 			<ul class="pla-results-ul">
 				<li><span class="pla-results-label"><span data-pla-results-location></span></span></li>
