added datetime for refactoring

--- a/templates/index.html
+++ b/templates/index.html
@@ -123,7 +123,7 @@
 
 			<ul class="pla-results-ul">
                 <li><span class="pla-results-label">Group:</span> <span data-pla-results-group></span></li>
-				<li><span class="pla-results-label">Default Route?:</span><span data-pla-results-defaultroute></span></li>
+				<li><span class="pla-results-label">Number of Round Spawns: </span><span data-pla-results-numspawns></span></li>
             </ul>
 			<ul class="pla-results-ul">
 				<li><span class="pla-results-label"><span data-pla-results-location></span></span></li>
