Added fields for spawns, bonus round, encounter hashes and a seed only mode for config.json

--- a/templates/fromseed.html
+++ b/templates/fromseed.html
@@ -33,6 +33,38 @@
                     <option value="19">Shiny Charm + Perfect</option>
                 </select>
             </div>
+			
+			<div class="pla-control">
+				<label for="frspawns">First Round Spawns</label>
+				<select id="frspawns">
+					<option value="8">8</option>
+					<option value="9">9</option>
+					<option value="10">10</option>
+				</select>
+			</div>
+			
+			<div class="pla-control">
+				<label for="bonus">Bonus Round?</label>
+				<input type="checkbox" id="bonus">
+			</div>
+			
+			<div class="pla-control">
+				<label for="brspawns">Bonus Round Spawns</label>
+				<select id="brspawns">
+					<option value="6">6</option>
+					<option value="7">7</option>
+				</select>
+			</div>
+			
+			<div class="pla-control">
+				<label for="frencounter">First Round Encounter Hash:</label>
+				<input type="text" id="frencounter">
+			</div>
+			
+			<div class="pla-control">
+				<label for="brencounter">Bound Round Encounter Hash:</label>
+				<input type="text" id="brencounter">
+			</div>
 
             <div class="pla-control-checkbox">
                 <label for="mmoShinyFilter">Shiny or Alpha</label>
