added new index page and back buttons to access all pages

--- a/templates/fromseed.html
+++ b/templates/fromseed.html
@@ -98,12 +98,19 @@
             </div>
 			
         </section>
+		
+		<section class="pla-control">
+			<div class="pla-control-actions">
+                <button class="pla-action-button" onclick="window.location.href='/'">Back</button>
+            </div>
+		</section>
 
         <section class="pla-section-results">
             <div class="pla-results" data-pla-results>
                 Search to begin
             </div>
         </section>
+		
     </main>
 
     <template data-pla-results-template>
