--- a/templates/mmo-checker.html
+++ b/templates/mmo-checker.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLA Distortion Checker</title>
+    <title>PLA MMO Checker</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
@@ -14,62 +14,91 @@
 <body>
 
     <header>
-        <h1 class="pla-heading"><span class="pla-heading-highlight">PLA</span> Distortion Checker</h1>
+        <h1 class="pla-heading"><span class="pla-heading-highlight">PLA</span> MMO Checker</h1>
     </header>
     <main>
         <section class="pla-section-options">
             <div class="pla-control">
-                <label for="mapSelect">Choose Map</label>
+                <label for="mapSelect">Choose Map Index</label>
                 <select id="mapSelect">
-                    <option value="obsidianfieldlands">Obsidian Fieldlands</option>
-                    <option value="crimsonmirelands">Crimson Mirelands</option>
-                    <option value="cobaltcoastlands">Cobalt Coastlands</option>
-                    <option value="coronethighlands">Coronet Highlands</option>
-                    <option value="alabastericelands">Alabaster Icelands</option>
+                    <option value="0">0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
                 </select>
             </div>
 
             <div class="pla-control">
                 <label for="rolls">Shiny Rolls</label>
                 <select id="rolls">
-                    <option value="1">Default</option>
-                    <option value="2">Dex Research 10</option>
-                    <option value="4">Dex Research Perfect</option>
-                    <option value="5">Shiny Charm</option>
-                    <option value="7">Shiny Charm + Perfect</option>
+                    <option value="13">Default</option>
+                    <option value="14">Dex Research 10</option>
+                    <option value="16">Dex Research Perfect</option>
+                    <option value="17">Shiny Charm</option>
+                    <option value="19">Shiny Charm + Perfect</option>
                 </select>
             </div>
 
             <div class="pla-control-checkbox">
-                <label for="distortionShinyFilter">Shiny or Alpha</label>
-                <input type="checkbox" id="distortionShinyOrAlphaFilter">
+                <label for="mmoShinyFilter">Shiny or Alpha</label>
+                <input type="checkbox" id="mmoShinyOrAlphaFilter">
             </div>
 
             <div class="pla-control-checkbox">
-                <label for="distortionShinyFilter">Shiny Only</label>
-                <input type="checkbox" id="distortionShinyFilter">
+                <label for="mmoShinyFilter">Shiny Only</label>
+                <input type="checkbox" id="mmoShinyFilter">
             </div>
 
             <div class="pla-control-checkbox">
-                <label for="distortionAlphaFilter">Alpha Only</label>
-                <input type="checkbox" id="distortionAlphaFilter">
+                <label for="mmoAlphaFilter">Alpha Only</label>
+                <input type="checkbox" id="mmoAlphaFilter">
+            </div>
+			
+			<div class="pla-control-checkbox">
+                <label for="mmoDefaultRouteFilter">Show Default Paths Only</label>
+                <input type="checkbox" id="mmoDefaultRouteFilter">
+            </div>
+			
+			<div class="pla-control">
+				<label for="mmoSpeciesFilter">Species Filter:</label>
+				<input type="text" id="mmoSpeciesFilter">
+			</div>
+
+			<!--
+			<div class="pla-control-checkbox">
+                <label for="inmapcheck">In Area: (Not Currently Functional)</label>
+                <input type="checkbox" id="inmapcheck">
+            </div>-->
+			
+            <div class="pla-control-actions">
+                <button class="pla-action-button" onclick="checkonemap()">Check Map Index</button>
             </div>
 
             <div class="pla-control-actions">
-                <button class="pla-action-button" onclick="checkDistortions()">Check Distortions</button>
-                <button class="pla-action-button" onclick="createDistortion()">Create Distortion</button>
+                <button class="pla-action-button" onclick="checkmmos()">Check All MMOS</button>
+            </div>
+			
+			<div class="pla-control-actions">
+                <button class="pla-action-button" onclick="checknormals()">Check Normal Outbreaks</button>
             </div>
         </section>
 
         <section class="pla-section-info">
-            <h3>Distortions</h3>
+            <h3>Maps</h3>
             <ul class="pla-info-list" data-pla-info-locations>
-
-            </ul>
-            <h3>Spawns</h3>
+			
+			</ul>
+			
+			<h3>Normal Outbreaks</h3>
             <ul class="pla-info-list" data-pla-info-spawns>
 
             </ul>
+						
+            <div class="pla-control-actions">
+                <button class="pla-action-button" onclick="checkmaps()">Refresh Maps</button>
+            </div>
+			
         </section>
 		
 		<section class="pla-control">
@@ -88,8 +117,9 @@
     <template data-pla-results-template>
         <div class="pla-results-item" data-pla-results-template>
             <ul class="pla-results-heading pla-results-ul">
+				<li class="pla-results-sprite" data-pla-results-sprite></li>
                 <li class="pla-results-species" data-pla-results-species></li>
-                <li>At <span class="pla-results-location" data-pla-results-location></span></li>
+                <li>At <span class="pla-results-mapname" data-pla-results-mapname></span></li>
             </ul>
 
             <ul class="pla-results-ul">
@@ -97,6 +127,13 @@
                 <li><span class="pla-results-label">Alpha:</span> <span data-pla-results-alpha></span></li>
             </ul>
 
+			<ul class="pla-results-ul">
+                <li><span class="pla-results-label">Group:</span> <span data-pla-results-group></span></li>
+				<li><span class="pla-results-label">Number of Round Spawns: </span><span data-pla-results-numspawns></span></li>
+            </ul>
+			<ul class="pla-results-ul">
+				<li><span class="pla-results-label"><span data-pla-results-location></span></span></li>
+			</ul>
             <ul class="pla-results-ul">
                 <li><span class="pla-results-label">Nature:</span> <span data-pla-results-nature></span></li>
                 <li><span class="pla-results-label">Gender:</span> <span data-pla-results-gender></span></li>
@@ -119,6 +156,9 @@
                     <li class="pla-results-ivs-spe" data-pla-results-ivs-spe></li>
                 </ul>
             </div>
+			
+			<div class="pla-results-teleport">
+			</div>
         </div>
     </template>
 
@@ -135,7 +175,7 @@
         </div>
     </template>
 
-    <script src="static/js/pla-distortion-checker.js"></script>
+    <script src="static/js/pla-mmo-checker.js"></script>
 </body>
 
 </html>
