--- a/templates/mmo-checker.html
+++ b/templates/mmo-checker.html
@@ -101,7 +101,7 @@
 			
         </section>
 		
-		<section class="pla-control">
+		<section class="pla-section-back">
 			<div class="pla-control-actions">
                 <button class="pla-action-button" onclick="window.location.href='/'">Back</button>
             </div>
