--- a/static/css/style.css
+++ b/static/css/style.css
@@ -77,6 +77,7 @@ main {
   grid-template-areas:
     "options results"
     "info results"
+	"back results"
     ". results";
   gap: 1rem;
 }
@@ -102,6 +103,10 @@ section {
 
 .pla-section-info {
   grid-area: info;
+}
+
+.pla-section-back {
+	grid-area: back;
 }
 
 .pla-section-results {
