--- a/templates/distortion.html
+++ b/templates/distortion.html
@@ -72,7 +72,7 @@
             </ul>
         </section>
 		
-		<section class="pla-control">
+		<section class="pla-section-back">
 			<div class="pla-control-actions">
                 <button class="pla-action-button" onclick="window.location.href='/'">Back</button>
             </div>
