--- a/templates/fromseed.html
+++ b/templates/fromseed.html
@@ -99,14 +99,14 @@
 			</div>-->
 			
 			<div class="pla-control">
-				<label for="frencounter">First Round Pokemon:</label>
+				<label for="frpokemon">First Round Pokemon:</label>
 				<select name="frpokemon" id="frpokemon" class="form-control">
 					<option value="">Select Pokemon</option>
 				</select>
 			</div>
 			
 			<div class="pla-control">
-				<label for="brencounter">Bonus Round Pokemon:</label>
+				<label for="brpokemon">Bonus Round Pokemon:</label>
 				<select name="brpokemon" id="brpokemon" class="form-control">
 					<option value="">Select Pokemon</option>
 				</select>
