add special thanks

--- a/templates/fromseed.html
+++ b/templates/fromseed.html
@@ -153,7 +153,7 @@
 
         <section class="pla-section-results">
             <div class="pla-results" data-pla-results>
-                Search to begin
+                This tool was created by Cappy, with help from Anubis, Kurt, Lincoln, Zyro and Santacrab420 for code and other assistance.
             </div>
         </section>
 		
