fixed gender ratios and mmopaths

--- a/templates/mmo-checker.html
+++ b/templates/mmo-checker.html
@@ -129,11 +129,14 @@
 
 			<ul class="pla-results-ul">
                 <li><span class="pla-results-label">Group:</span> <span data-pla-results-group></span></li>
-				<li><span class="pla-results-label">Number of Round Spawns: </span><span data-pla-results-numspawns></span></li>
+				<li><span class="pla-results-label">Number of First Round Spawns: </span><span data-pla-results-numspawns></span></li>
             </ul>
 			<ul class="pla-results-ul">
 				<li><span class="pla-results-label"><span data-pla-results-location></span></span></li>
 			</ul>
+			<!--<ul class="pla-results-ul">
+				<li><span class="pla-results-label">Duplicates:<span data-pla-results-dupes></span></span></li>
+			</ul>-->
             <ul class="pla-results-ul">
                 <li><span class="pla-results-label">Nature:</span> <span data-pla-results-nature></span></li>
                 <li><span class="pla-results-label">Gender:</span> <span data-pla-results-gender></span></li>
