--- a/templates/alphaseed.html
+++ b/templates/alphaseed.html
@@ -102,6 +102,9 @@
 				<label for="gendercheck">Spawn is Fixed Gender/Genderless?</label>
 				<input type="checkbox" id="gendercheck">
 			</div>
+			
+			<button type="button" class="collapsible">Advanced Options</button>
+			<div class="content">
 
 			<div class="pla-control">
 				<label for="speciesmap">Map:</label>
@@ -133,6 +136,7 @@
                 <label for="daynightcheck">Is Nighttime?</label>
                 <input type="checkbox" id="daynightcheck">
             </div>
+			</div>
 
 			<div class="pla-control">
 				<label for="gender">Gender Ratio</label>
@@ -189,7 +193,8 @@
     <template data-pla-results-template>
         <div class="pla-results-item" data-pla-results-template>
             <ul class="pla-results-heading pla-results-ul">
-				<li class="pla-results-species">Results</li>
+				<li class="pla-results-sprite" data-pla-results-sprite></li>
+				<li class="pla-results-species" data-pla-results-species></li>
 				<!--<li class="pla-results-sprite" data-pla-results-sprite></li>
                 <li class="pla-results-species" data-pla-results-species></li>
                 <li>At <span class="pla-results-mapname" data-pla-results-mapname></span></li>-->
