--- a/templates/fromseed.html
+++ b/templates/fromseed.html
@@ -39,6 +39,34 @@
 				$('#brpokemon').html('<option value="">Select Second Round Species</option>');
 			}
 		});
+
+		$(document).on('change', '#normalcheckbox', function() {
+			var outbreaktype = $(this).prop('checked');
+			console.log(outbreaktype);
+			var html_code2 = '';
+			var html_code3 = '';
+			if (outbreaktype) {
+				for(i = 10; i <=15; i++) {
+					html_code2 += '<option value="' + i + '">' + i + '</option>';
+				}
+				html_code3 += '<option value="26">Default</option>'
+                html_code3 += '<option value="27">Dex Research 10</option>'
+                html_code3 += '<option value="29">Dex Research Perfect</option>'
+                html_code3 += '<option value="30">Shiny Charm</option>'
+                html_code3 += '<option value="32">Shiny Charm + Perfect</option>'
+			} else {
+				for(i = 8; i <=10; i++) {
+					html_code2 += '<option value="' + i + '">' + i + '</option>';
+				}
+				html_code3 += '<option value="13">Default</option>'
+                html_code3 += '<option value="14">Dex Research 10</option>'
+                html_code3 += '<option value="16">Dex Research Perfect</option>'
+                html_code3 += '<option value="17">Shiny Charm</option>'
+                html_code3 += '<option value="19">Shiny Charm + Perfect</option>'
+			}
+			$('#frspawns').html(html_code2);
+			$('#rolls').html(html_code3);
+		});
 	});
 	</script>
 </head>
@@ -65,6 +93,11 @@
                     <option value="19">Shiny Charm + Perfect</option>
                 </select>
             </div>
+
+            <div class="pla-control">
+				<label for="normalcheckbox">Normal Outbreak Check Only:</label>
+				<input type="checkbox" id="normalcheckbox">
+			</div>
 
 			<div class="pla-control">
 				<label for="frspawns">First Round Spawns</label>
@@ -150,6 +183,8 @@
                 This tool was created by Cappy, with help from Anubis, Kurt, Lincoln, Zyro and Santacrab420 for code and other assistance.
             </div>
         </section>
+
+		<section class="pla-section-info"></section>
 
         <section class="pla-section-back">
             <div class="pla-control-actions">
