gender symbols and colors!

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -329,6 +329,16 @@ section {
   color: var(--color-shadow);
 }
 
+.pla-male {
+	color: blue;
+	font-weight: bold;
+}
+
+.pla-female {
+	color: pink;
+	font-weight: bold;
+}
+
 .pla-results-firstpath {
 	color: var(--color-accent-1);
 	font-weight: bold;
