--- a/templates/mmo-checker.html
+++ b/templates/mmo-checker.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link href="static/css/style.css" rel="stylesheet">
+	<script src="https://kit.fontawesome.com/acd232d529.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
