--- a/templates/fromseed.html
+++ b/templates/fromseed.html
@@ -69,6 +69,7 @@
 		});
 	});
 	</script>
+	<script src="https://kit.fontawesome.com/acd232d529.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
