--- a/templates/alphaseed.html
+++ b/templates/alphaseed.html
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLA Spawn Checker</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <link href="static/css/style.css" rel="stylesheet">
-	<script type="text/javascript" src="static/js/jquery.min.js"></script>
+{% block head %}
+	<script type="text/javascript" src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
 	<script>
 	$(document).ready(function(e){
 		console.log("ready!")
@@ -68,146 +60,129 @@
 	});
 				
 	</script>
-</head>
+{% endblock %}
 
-<body>
+{% block main %}
+	<section class="pla-section-results">
+		<div class="pla-results" data-pla-results>
+			This tool was created by Cappy, with help from Anubis, Kurt, Lincoln, Zyro and Santacrab420 for code and other assistance.
+		</div>
+	</section>
+{% endblock %}
 
-    <header>
-        <h1 class="pla-heading"><span class="pla-heading-highlight">PLA</span> Spawn Checker</h1>
-    </header>
-    <main>
-        <section class="pla-section-options">
-            <div class="pla-control">
-                <label for="inputseed">Input Seed:</label>
-                <input type="text" id="inputseed">
-            </div>
+{% block sidebar %}
+	<section class="pla-section-options">
+		<div class="pla-control">
+			<label for="inputseed">Input Seed:</label>
+			<input type="text" id="inputseed">
+		</div>
 
-            <div class="pla-control">
-                <label for="rolls">Shiny Rolls</label>
-                <select id="rolls">
-                    <option value="1">Default</option>
-                    <option value="2">Dex Research 10</option>
-                    <option value="4">Dex Research Perfect</option>
-                    <option value="5">Shiny Charm</option>
-                    <option value="7">Shiny Charm + Perfect</option>
-                </select>
-            </div>
+		<div class="pla-control">
+			<label for="rolls">Shiny Rolls</label>
+			<select id="rolls">
+				<option value="1">Default</option>
+				<option value="2">Dex Research 10</option>
+				<option value="4">Dex Research Perfect</option>
+				<option value="5">Shiny Charm</option>
+				<option value="7">Shiny Charm + Perfect</option>
+			</select>
+		</div>
 
-			<div class="pla-control">
-				<label for="staticalpha">Static Alpha?</label>
-				<input type="checkbox" id="staticalpha">
-			</div>
+		<div class="pla-control space-between">
+			<label for="staticalpha">Static Alpha?</label>
+			<input type="checkbox" id="staticalpha">
+		</div>
 
-			<div class="pla-control">
-				<label for="gendercheck">Spawn is Fixed Gender/Genderless?</label>
-				<input type="checkbox" id="gendercheck">
-			</div>
-			
-			<button type="button" class="collapsible">Advanced Options</button>
-			<div class="content">
-
-			<div class="pla-control">
-				<label for="speciesmap">Map:</label>
-				<select name="speciesmap" id="speciesmap" class="form-control">
-					<option value="">Select Map...</option>
-					<option value="AlabasterIcelands">Alabaster Icelands</option>
-					<option value="CoronetHighlands">Coronet Highlands</option>
-					<option value="CobaltCoastlands">Cobalt Coastlands</option>
-					<option value="CrimsonMirelands">Crimson Mirelands</option>
-					<option value="ObsidianFieldlands">Obsidian Fieldlands</option>
-				</select>
-			</div>
-
-			<div class="pla-control">
-				<label for="speciesnames">Species:</label>
-				<select name="speciesnames" id="speciesnames" class="form-control">
-					<option value="">Select Pokemon</option>
-				</select>
-			</div>
-			
-			<div class="pla-control">
-				<label for="spawnernames">Species Spawner:</label>
-				<select name="spawnernames" id="spawnernames" class="form-control">
-					<option value="">Select Spawner</option>
-				</select>
-			</div>
-
-			<div class="pla-control">
-                <label for="daynightcheck">Is Nighttime?</label>
-                <input type="checkbox" id="daynightcheck">
-            </div>
-			</div>
-
-			<div class="pla-control">
-				<label for="gender">Gender Ratio</label>
-				<select id="gender">
-					<option value="31">1 &#9792; : 7 &#9794;</option>
-					<option value="63">1 &#9792; : 4 &#9794;</option>
-					<option value="127">1 &#9792; : 1 &#9794;</option>
-					<option value="191">3 &#9792; : 1 &#9794;</option>
-					<option value="0"> &#9794; Only</option>
-					<option value="255"> &#9792; Only</option>
-					<option value="-1"> Genderless</option>
-				</select>
-			</div>
-
-
-            <div class="pla-control-actions">
-                <button class="pla-action-button" onclick="checkalphaadv()">Find Alpha Shiny Advances</button>
-            </div>
-
-        </section>
+		<div class="pla-control">
+			<label for="gendercheck">Spawn is Fixed Gender/Genderless?</label>
+			<input type="checkbox" id="gendercheck">
+		</div>
 		
-		<section class="pla-section-info">
-			<h3>Spawner Pokemon</h3>
-			<ul class="pla-info-spawner" data-pla-info-spawner>
-			
-			</ul>
-		</section>
+		<button type="button" class="pla-button collapsible">Advanced Options</button>
+		<div class="content">
 
-        <section class="pla-section-results">
-            <div class="pla-results" data-pla-results>
-                This tool was created by Cappy, with help from Anubis, Kurt, Lincoln, Zyro and Santacrab420 for code and other assistance.
-            </div>
-        </section>
+		<div class="pla-control">
+			<label for="speciesmap">Map:</label>
+			<select name="speciesmap" id="speciesmap" class="form-control">
+				<option value="">Select Map...</option>
+				<option value="AlabasterIcelands">Alabaster Icelands</option>
+				<option value="CoronetHighlands">Coronet Highlands</option>
+				<option value="CobaltCoastlands">Cobalt Coastlands</option>
+				<option value="CrimsonMirelands">Crimson Mirelands</option>
+				<option value="ObsidianFieldlands">Obsidian Fieldlands</option>
+			</select>
+		</div>
 
-        <section class="pla-section-back">
-            <div class="pla-control-actions">
-                <button class="pla-action-button" onclick="window.location.href='https://github.com/capitalism-sudo/pla-multi-checker/wiki'">Click Here for the Seed Checker Wiki</button>
-            </div>
+		<div class="pla-control">
+			<label for="speciesnames">Species:</label>
+			<select name="speciesnames" id="speciesnames" class="form-control">
+				<option value="">Select Pokemon</option>
+			</select>
+		</div>
+		
+		<div class="pla-control">
+			<label for="spawnernames">Species Spawner:</label>
+			<select name="spawnernames" id="spawnernames" class="form-control">
+				<option value="">Select Spawner</option>
+			</select>
+		</div>
 
-			<div class="pla-control-actions">
-                <button class="pla-action-button" onclick="window.location.href='/'">Back</button>
-            </div>
-        </section>
+		<div class="pla-control">
+			<label for="daynightcheck">Is Nighttime?</label>
+			<input type="checkbox" id="daynightcheck">
+		</div>
+		</div>
 
-        <section class="pla-section-icons">
-            <div class="placontrol-actions">
-                <input type="image" class="icons" src="../static/img/discord-v2_round.ico" onclick="window.location.href='https://discord.gg/2JSZnm8GHf'">
-                <input type="image" class="icons" src="../static/img/youtube_round.ico" onclick="window.location.href='https://www.youtube.com/channel/UCrItwn5zVd2jinwkznYn-dQ'">
-            </div>
-        </section>
+		<div class="pla-control">
+			<label for="gender">Gender Ratio</label>
+			<select id="gender">
+				<option value="31">1 &#9792; : 7 &#9794;</option>
+				<option value="63">1 &#9792; : 4 &#9794;</option>
+				<option value="127">1 &#9792; : 1 &#9794;</option>
+				<option value="191">3 &#9792; : 1 &#9794;</option>
+				<option value="0"> &#9794; Only</option>
+				<option value="255"> &#9792; Only</option>
+				<option value="-1"> Genderless</option>
+			</select>
+		</div>
 
-    </main>
+		<div class="pla-control-actions">
+			<button class="pla-button pla-button-action" onclick="checkalphaadv()">Find Alpha Shiny Advances</button>
+		</div>
+	</section>
 
+	<section class="pla-section-info">
+		<h3>Spawner Pokemon</h3>
+		<ul class="pla-info-spawner" data-pla-info-spawner>
+		
+		</ul>
+	</section>
+
+	<section class="pla-section-back">
+		<div class="pla-control-actions">
+			<a class="pla-button pla-button-action" href="https://github.com/capitalism-sudo/pla-multi-checker/wiki" target="_blank">Click Here for the Seed Checker Wiki</a>
+		</div>
+
+		<div class="pla-control-actions">
+			<a class="pla-button pla-button-action" href="/">Back</a>
+		</div>
+	</section>
+
+	<section class="pla-section-icons">
+		<div class="pla-control-actions">
+			<a href="https://discord.gg/2JSZnm8GHf" target="_blank"><img class="icons" src="{{ url_for('static', filename='img/discord-v2_round.ico') }}" alt="Discord"></a>
+			<a href="https://www.youtube.com/channel/UCrItwn5zVd2jinwkznYn-dQ" target="_blank"><img class="icons" src="{{ url_for('static', filename='img/youtube_round.ico') }}"></a>
+		</div>
+	</section>
+{% endblock %}
+
+{% block templates %}
     <template data-pla-results-template>
         <div class="pla-results-item" data-pla-results-template>
             <ul class="pla-results-heading pla-results-ul">
 				<li class="pla-results-sprite" data-pla-results-sprite></li>
 				<li class="pla-results-species" data-pla-results-species></li>
-				<!--<li class="pla-results-sprite" data-pla-results-sprite></li>
-                <li class="pla-results-species" data-pla-results-species></li>
-                <li>At <span class="pla-results-mapname" data-pla-results-mapname></span></li>-->
             </ul>
-
-            <!--<ul class="pla-results-ul">
-                <li><span class="pla-results-label">Shiny:</span> <span data-pla-results-shiny></span></li>
-                <li><span class="pla-results-label">Alpha:</span> <span data-pla-results-alpha></span></li>
-            </ul>-->
-
-			<!--<ul class="pla-results-ul">
-				<li><span class="pla-results-label"><span data-pla-results-location></span></span></li>
-			</ul>-->
 
 			<ul class="pla-results-ul">
 				<li><span class="pla-results-adv">Advances To Shiny:</span> <span data-pla-results-adv></span></li>
@@ -217,12 +192,6 @@
                 <li><span class="pla-results-label">Nature:</span> <span data-pla-results-nature></span></li>
                 <li><span class="pla-results-label">Gender:</span> <span data-pla-results-gender></span></li>
             </ul>
-
-            <!--<ul class="pla-results-ul">
-                <li><span class="pla-results-label">Seed:</span> <span data-pla-results-seed></span></li>
-                <li><span class="pla-results-label">EC:</span> <span data-pla-results-ec></span></li>
-                <li><span class="pla-results-label">PID:</span> <span data-pla-results-pid></span></li>
-            </ul>-->
 
             <div class="pla-results-ivs-container">
                 <span class="pla-results-label">IVs:</span>
@@ -235,9 +204,6 @@
                     <li class="pla-results-ivs-spe" data-pla-results-ivs-spe></li>
                 </ul>
             </div>
-
-			<!--<div class="pla-results-teleport">
-			</div>-->
         </div>
     </template>
 
@@ -253,8 +219,8 @@
             <div></div>
         </div>
     </template>
+{% endblock %}
 
+{% block script %}
     <script src="static/js/pla-alpha-seed-reader.js"></script>
-</body>
-
-</html>
+{% endblock %}
