--- a/templates/distortion.html
+++ b/templates/distortion.html
@@ -1,90 +1,77 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLA Distortion Checker</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <link href="static/css/style.css" rel="stylesheet">
-</head>
+{% block main %}
+    <section class="pla-section-results">
+        <div class="pla-results" data-pla-results>
+            Search to begin
+        </div>
+    </section>
+{% endblock %}
 
-<body>
+{% block sidebar %}
+    <section class="pla-section-options">
+        <div class="pla-control">
+            <label for="mapSelect">Choose Map</label>
+            <select id="mapSelect">
+                <option value="obsidianfieldlands">Obsidian Fieldlands</option>
+                <option value="crimsonmirelands">Crimson Mirelands</option>
+                <option value="cobaltcoastlands">Cobalt Coastlands</option>
+                <option value="coronethighlands">Coronet Highlands</option>
+                <option value="alabastericelands">Alabaster Icelands</option>
+            </select>
+        </div>
 
-    <header>
-        <h1 class="pla-heading"><span class="pla-heading-highlight">PLA</span> Distortion Checker</h1>
-    </header>
-    <main>
-        <section class="pla-section-options">
-            <div class="pla-control">
-                <label for="mapSelect">Choose Map</label>
-                <select id="mapSelect">
-                    <option value="obsidianfieldlands">Obsidian Fieldlands</option>
-                    <option value="crimsonmirelands">Crimson Mirelands</option>
-                    <option value="cobaltcoastlands">Cobalt Coastlands</option>
-                    <option value="coronethighlands">Coronet Highlands</option>
-                    <option value="alabastericelands">Alabaster Icelands</option>
-                </select>
-            </div>
+        <div class="pla-control">
+            <label for="rolls">Shiny Rolls</label>
+            <select id="rolls">
+                <option value="1">Default</option>
+                <option value="2">Dex Research 10</option>
+                <option value="4">Dex Research Perfect</option>
+                <option value="5">Shiny Charm</option>
+                <option value="7">Shiny Charm + Perfect</option>
+            </select>
+        </div>
 
-            <div class="pla-control">
-                <label for="rolls">Shiny Rolls</label>
-                <select id="rolls">
-                    <option value="1">Default</option>
-                    <option value="2">Dex Research 10</option>
-                    <option value="4">Dex Research Perfect</option>
-                    <option value="5">Shiny Charm</option>
-                    <option value="7">Shiny Charm + Perfect</option>
-                </select>
-            </div>
+        <div class="space-between">
+            <label for="distortionShinyFilter">Shiny or Alpha</label>
+            <input type="checkbox" id="distortionShinyOrAlphaFilter">
+        </div>
 
-            <div class="pla-control-checkbox">
-                <label for="distortionShinyFilter">Shiny or Alpha</label>
-                <input type="checkbox" id="distortionShinyOrAlphaFilter">
-            </div>
+        <div class="space-between">
+            <label for="distortionShinyFilter">Shiny Only</label>
+            <input type="checkbox" id="distortionShinyFilter">
+        </div>
 
-            <div class="pla-control-checkbox">
-                <label for="distortionShinyFilter">Shiny Only</label>
-                <input type="checkbox" id="distortionShinyFilter">
-            </div>
+        <div class="space-between">
+            <label for="distortionAlphaFilter">Alpha Only</label>
+            <input type="checkbox" id="distortionAlphaFilter">
+        </div>
 
-            <div class="pla-control-checkbox">
-                <label for="distortionAlphaFilter">Alpha Only</label>
-                <input type="checkbox" id="distortionAlphaFilter">
-            </div>
+        <div class="pla-control-actions">
+            <button type="button" class="pla-button pla-button-action" onclick="checkDistortions()">Check Distortions</button>
+            <button type="button" class="pla-button pla-button-action" onclick="createDistortion()">Create Distortion</button>
+        </div>
+    </section>
 
-            <div class="pla-control-actions">
-                <button class="pla-action-button" onclick="checkDistortions()">Check Distortions</button>
-                <button class="pla-action-button" onclick="createDistortion()">Create Distortion</button>
-            </div>
-        </section>
+    <section class="pla-section-info">
+        <h3>Distortions</h3>
+        <ul class="pla-info-list" data-pla-info-locations>
 
-        <section class="pla-section-info">
-            <h3>Distortions</h3>
-            <ul class="pla-info-list" data-pla-info-locations>
+        </ul>
+        <h3>Spawns</h3>
+        <ul class="pla-info-list" data-pla-info-spawns>
 
-            </ul>
-            <h3>Spawns</h3>
-            <ul class="pla-info-list" data-pla-info-spawns>
+        </ul>
+    </section>
 
-            </ul>
-        </section>
-		
-		<section class="pla-section-back">
-			<div class="pla-control-actions">
-                <button class="pla-action-button" onclick="window.location.href='/'">Back</button>
-            </div>
-		</section>
+    <section class="pla-section-back">
+        <div class="pla-control-actions">
+            <a class="pla-button pla-button-action" href="/">Back</a>
+        </div>
+    </section>
+{% endblock %}
 
-        <section class="pla-section-results">
-            <div class="pla-results" data-pla-results>
-                Search to begin
-            </div>
-        </section>
-    </main>
-
+{% block templates %}
     <template data-pla-results-template>
         <div class="pla-results-item" data-pla-results-template>
             <ul class="pla-results-heading pla-results-ul">
@@ -134,8 +121,8 @@
             <div></div>
         </div>
     </template>
+{% endblock %}
 
+{% block script %}
     <script src="static/js/pla-distortion-checker.js"></script>
-</body>
-
-</html>
+{% endblock %}
