--- a/templates/fromseed.html
+++ b/templates/fromseed.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "base.html" %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PLA MMO Checker</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-    <link href="static/css/style.css" rel="stylesheet">
+{% block main %}
+    <section class="pla-section-results">
+        <div class="pla-results" data-pla-results>
+            This tool was created by Cappy, with help from Anubis, Kurt, Lincoln, Zyro and Santacrab420 for code and other assistance.
+        </div>
+    </section>
+{% endblock %}
+
+{% block head %}
 	<script type="text/javascript" src="static/js/jquery.min.js"></script>
 	<script>
 	$(document).ready(function(e){
@@ -70,142 +70,128 @@
 	});
 	</script>
 	<script src="https://kit.fontawesome.com/acd232d529.js" crossorigin="anonymous"></script>
-</head>
+{% endblock %}
 
-<body>
+{% block sidebar %}
+    <section class="pla-section-options">
+        <div class="pla-control">
+            <label for="inputseed">Input Seed:</label>
+            <input type="text" id="inputseed">
+        </div>
 
-    <header>
-        <h1 class="pla-heading"><span class="pla-heading-highlight">PLA</span> MMO Checker</h1>
-    </header>
-    <main>
-        <section class="pla-section-options">
-            <div class="pla-control">
-                <label for="inputseed">Input Seed:</label>
-                <input type="text" id="inputseed">
-            </div>
+        <div class="pla-control">
+            <label for="rolls">Shiny Rolls</label>
+            <select id="rolls">
+                <option value="13">Default</option>
+                <option value="14">Dex Research 10</option>
+                <option value="16">Dex Research Perfect</option>
+                <option value="17">Shiny Charm</option>
+                <option value="19">Shiny Charm + Perfect</option>
+            </select>
+        </div>
 
-            <div class="pla-control">
-                <label for="rolls">Shiny Rolls</label>
-                <select id="rolls">
-                    <option value="13">Default</option>
-                    <option value="14">Dex Research 10</option>
-                    <option value="16">Dex Research Perfect</option>
-                    <option value="17">Shiny Charm</option>
-                    <option value="19">Shiny Charm + Perfect</option>
-                </select>
-            </div>
+        <div class="pla-control">
+            <label for="normalcheckbox">Normal Outbreak Check Only:</label>
+            <input type="checkbox" id="normalcheckbox">
+        </div>
 
-            <div class="pla-control">
-				<label for="normalcheckbox">Normal Outbreak Check Only:</label>
-				<input type="checkbox" id="normalcheckbox">
-			</div>
+        <div class="pla-control">
+            <label for="frspawns">First Round Spawns</label>
+            <select id="frspawns">
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
+            </select>
+        </div>
 
-			<div class="pla-control">
-				<label for="frspawns">First Round Spawns</label>
-				<select id="frspawns">
-					<option value="8">8</option>
-					<option value="9">9</option>
-					<option value="10">10</option>
-				</select>
-			</div>
+        <div class="pla-control">
+            <label for="bonus">Bonus Round?</label>
+            <input type="checkbox" id="bonus">
+        </div>
 
-			<div class="pla-control">
-				<label for="bonus">Bonus Round?</label>
-				<input type="checkbox" id="bonus">
-			</div>
+        <div class="pla-control">
+            <label for="brspawns">Bonus Round Spawns</label>
+            <select id="brspawns">
+                <option value="6">6</option>
+                <option value="7">7</option>
+            </select>
+        </div>
 
-			<div class="pla-control">
-				<label for="brspawns">Bonus Round Spawns</label>
-				<select id="brspawns">
-					<option value="6">6</option>
-					<option value="7">7</option>
-				</select>
-			</div>
+        <!--<div class="pla-control">
+            <label for="frencounter">First Round Encounter Hash:</label>
+            <input type="text" id="frencounter">
+        </div>
 
-			<!--<div class="pla-control">
-				<label for="frencounter">First Round Encounter Hash:</label>
-				<input type="text" id="frencounter">
-			</div>
+        <div class="pla-control">
+            <label for="brencounter">Bound Round Encounter Hash:</label>
+            <input type="text" id="brencounter">
+        </div>-->
 
-			<div class="pla-control">
-				<label for="brencounter">Bound Round Encounter Hash:</label>
-				<input type="text" id="brencounter">
-			</div>-->
+        <div class="pla-control">
+            <label for="frpokemon">First Round Pokemon:</label>
+            <select name="frpokemon" id="frpokemon" class="form-control">
+                <option value="">Select Pokemon</option>
+            </select>
+        </div>
 
-			<div class="pla-control">
-				<label for="frpokemon">First Round Pokemon:</label>
-				<select name="frpokemon" id="frpokemon" class="form-control">
-					<option value="">Select Pokemon</option>
-				</select>
-			</div>
+        <div class="pla-control">
+            <label for="brpokemon">Bonus Round Pokemon:</label>
+            <select name="brpokemon" id="brpokemon" class="form-control">
+                <option value="">Select Pokemon</option>
+            </select>
+        </div>
 
-			<div class="pla-control">
-				<label for="brpokemon">Bonus Round Pokemon:</label>
-				<select name="brpokemon" id="brpokemon" class="form-control">
-					<option value="">Select Pokemon</option>
-				</select>
-			</div>
+        <div class="pla-control-checkbox">
+            <label for="mmoShinyFilter">Shiny or Alpha</label>
+            <input type="checkbox" id="mmoShinyOrAlphaFilter">
+        </div>
 
-            <div class="pla-control-checkbox">
-                <label for="mmoShinyFilter">Shiny or Alpha</label>
-                <input type="checkbox" id="mmoShinyOrAlphaFilter">
-            </div>
+        <div class="pla-control-checkbox">
+            <label for="mmoShinyFilter">Shiny Only</label>
+            <input type="checkbox" id="mmoShinyFilter">
+        </div>
 
-            <div class="pla-control-checkbox">
-                <label for="mmoShinyFilter">Shiny Only</label>
-                <input type="checkbox" id="mmoShinyFilter">
-            </div>
+        <div class="pla-control-checkbox">
+            <label for="mmoAlphaFilter">Alpha Only</label>
+            <input type="checkbox" id="mmoAlphaFilter">
+        </div>
 
-            <div class="pla-control-checkbox">
-                <label for="mmoAlphaFilter">Alpha Only</label>
-                <input type="checkbox" id="mmoAlphaFilter">
-            </div>
+        <div class="pla-control-checkbox">
+            <label for="mmoDefaultRouteFilter">Show Default Paths Only</label>
+            <input type="checkbox" id="mmoDefaultRouteFilter">
+        </div>
 
-			<div class="pla-control-checkbox">
-                <label for="mmoDefaultRouteFilter">Show Default Paths Only</label>
-                <input type="checkbox" id="mmoDefaultRouteFilter">
-            </div>
-
-			<!--
-			<div class="pla-control-checkbox">
-                <label for="inmapcheck">In Area: (Not Currently Functional)</label>
-                <input type="checkbox" id="inmapcheck">
-            </div>-->
+        <!--
+        <div class="pla-control-checkbox">
+            <label for="inmapcheck">In Area: (Not Currently Functional)</label>
+            <input type="checkbox" id="inmapcheck">
+        </div>-->
 
 
-            <div class="pla-control-actions">
-                <button class="pla-action-button" onclick="checkmmos()">Check MMO Seed</button>
-            </div>
+        <div class="pla-control-actions">
+            <button class="pla-button pla-button-action" onclick="checkmmos()">Check MMO Seed</button>
+        </div>
+    </section>
 
-        </section>
+    <section class="pla-section-back">
+		<div class="pla-control-actions">
+			<a class="pla-button pla-button-action" href="https://github.com/capitalism-sudo/pla-multi-checker/wiki" target="_blank">Click Here for the Seed Checker Wiki</a>
+		</div>
 
-        <section class="pla-section-results">
-            <div class="pla-results" data-pla-results>
-                This tool was created by Cappy, with help from Anubis, Kurt, Lincoln, Zyro and Santacrab420 for code and other assistance.
-            </div>
-        </section>
+		<div class="pla-control-actions">
+			<a class="pla-button pla-button-action" href="/">Back</a>
+		</div>
+	</section>
 
-		<section class="pla-section-info"></section>
+	<section class="pla-section-icons">
+		<div class="pla-control-actions">
+			<a href="https://discord.gg/2JSZnm8GHf" target="_blank"><img class="icons" src="{{ url_for('static', filename='img/discord-v2_round.ico') }}" alt="Discord"></a>
+			<a href="https://www.youtube.com/channel/UCrItwn5zVd2jinwkznYn-dQ" target="_blank"><img class="icons" src="{{ url_for('static', filename='img/youtube_round.ico') }}"></a>
+		</div>
+	</section>
+{% endblock %}
 
-        <section class="pla-section-back">
-            <div class="pla-control-actions">
-                <button class="pla-action-button" onclick="window.location.href='https://github.com/capitalism-sudo/pla-multi-checker/wiki'">Click Here for the Seed Checker Wiki</button>
-            </div>
-
-			<div class="pla-control-actions">
-                <button class="pla-action-button" onclick="window.location.href='/'">Back</button>
-            </div>
-        </section>
-
-        <section class="pla-section-icons">
-            <div class="placontrol-actions">
-                <input type="image" class="icons" src="../static/img/discord-v2_round.ico" onclick="window.location.href='https://discord.gg/2JSZnm8GHf'">
-                <input type="image" class="icons" src="../static/img/youtube_round.ico" onclick="window.location.href='https://www.youtube.com/channel/UCrItwn5zVd2jinwkznYn-dQ'">
-            </div>
-        </section>
-
-    </main>
-
+{% block templates %}
     <template data-pla-results-template>
         <div class="pla-results-item" data-pla-results-template>
             <ul class="pla-results-heading pla-results-ul">
@@ -244,9 +230,6 @@
                     <li class="pla-results-ivs-spe" data-pla-results-ivs-spe></li>
                 </ul>
             </div>
-
-			<!--<div class="pla-results-teleport">
-			</div>-->
         </div>
     </template>
 
@@ -262,8 +245,8 @@
             <div></div>
         </div>
     </template>
+{% block templates %}
 
+{% block script %}
     <script src="static/js/pla-mmo-seed-reader.js"></script>
-</body>
-
-</html>
+{% block script %}
